--- a/cart.html
+++ b/cart.html
@@ -59,5 +59,67 @@
             </div>
         </div>
     </section>
+    
+
+    <section>
+        <div class="formalert">
+            <div class="cartPerent">
+                <div>
+                    <div class="toutal">
+                        <!-- les note de jeur -->
+                         <div><h3>95</h3></div>
+                         <div><p>ST</p></div>
+                    </div>
+                    <div class="imagedejeue">
+                        <!-- image de jeuer -->
+                         <img src="/src/assets/img/p67340611.png" alt="">
+                    </div>
+                    <div class="nomeDejer">
+                        <!-- nome de jeuer  -->
+                         <h3> Mbapé</h3>
+                    </div>
+                    <div class="pawordeJeur">
+                        <!-- les number de jeur -->
+                        <div>
+                            <div>pac</div>
+                            <div>80</div>
+                        </div>
+                        <div>
+                            <div>sho</div>
+                            <div>87</div>
+                        </div>
+                        <div>
+                            <div>pas</div>
+                            <div>83</div>
+                        </div>
+                        <div>
+                            <div>dri</div>
+                            <div>86</div>
+                        </div>
+                        <div>
+                            <div>def</div>
+                            <div>33</div>
+                        </div>
+                        <div>
+                            <div>phy</div>
+                            <div>60</div>
+                        </div>
+                    </div>
+                    <div class="footerDecart">
+                        <!-- footer de cart  -->
+                        <div><img src="/src/assets/img/france.png" alt=""></div>
+                        <div><img src="/src/assets/img/Rial madrid.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="button">
+                <button class="modif">modification</button>
+                <button class="surision">suprmer</button>
+            </div>
+              
+        </div>
+    </section>
+
+
 </body>
 </html>
